<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Subscriptions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Subscriptions</string>
    <string name="nav_header_subtitle">Manage your subscriptions</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>

    <string name="state_error_title">Error</string>
    <string name="state_empty_title">No subscriptions found</string>
    <string name="state_empty_summary">Have not added any subscription yet</string>
    <string name="state_empty_view_title">Subscription not found</string>
    <string name="state_empty_view_summary">Please, select another subscription from the list</string>

    <string name="action_share">Share with</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>


    <!-- Subscription Edit Screen -->
    <string name="sub_color">Background color</string>
    <string name="sub_price">Price</string>
    <string name="sub_currency">Currency</string>
    <string name="sub_name">Name</string>
    <string name="sub_description">Description</string>
    <string name="sub_first_payment">First payment</string>
    <string name="sub_next_payment">Next payment</string><!-- next renewal date-->
    <string name="date_placeholder">dd//mm/yyyy</string>
    <string name="sub_previous_payment">Previous payment</string>
    <string name="sub_bill_period">Billing period</string>
    <string name="sub_bill_period_every">Every :</string>

    <plurals name="sub_bill_period_days">
        <item quantity="one">Every %d day</item>
        <item quantity="other">Every %d days</item>
    </plurals>
    <plurals name="sub_bill_period_weeks">
        <item quantity="one">Every %d week</item>
        <item quantity="other">Every %d weeks</item>
    </plurals>
    <plurals name="sub_bill_period_months">
        <item quantity="one">Every %d month</item>
        <item quantity="other">Every %d months</item>
    </plurals>
    <plurals name="sub_bill_period_years">
        <item quantity="one">Every %d year</item>
        <item quantity="other">Every %d years</item>
    </plurals>

    <string name="sub_status">Renewal status</string>
    <string name="sub_expire_date_in">Expire in</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_field_next_payment">Must be greater than the date of the first payment</string>

    <string name="time_left_today">Today</string>
    <plurals name="time_left_days">
        <item quantity="one">Tomorrow</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="time_left_expired">Expired</string>

    <string name="dialog_delete_title">Confirm delete</string>
    <string name="dialog_delete_summary">Are you sure you want to delete this entry?</string>
    <string name="dialog_delete_delete_btn">Delete</string>




    <!-- Preference screen-->
    <string name="title_activity_settings">Settings</string>
    <!-- General settings -->
    <string name="pref_general_header">General</string>
    <string name="pref_interface_category">Appearance</string>

    <string name="pref_interface_dark_theme_title">Dark Theme</string>
    <string name="pref_interface_dark_theme_summary">Enable dark theme throughout the app</string>

    <!-- Info Preferences -->
    <string name="pref_about_header">About this</string>

    <string name="pref_about_version_title">App version</string>
    <string name="pref_about_license_title">License &amp; Terms of use</string>
    <string name="pref_about_license_summary">License details and privacy policy</string>

    <string name="pref_about_send_feedback_title">Send Feedback</string>
    <string name="pref_about_send_feedback_summary">Help us make app better</string>

    <string name="pref_about_send_feedback_header">Feedback with</string>
    <string name="pref_about_send_feedback_error">Need an email app to send feedback</string>
    <string name="pref_about_others_apps_title">View other apps</string>
    <string name="pref_about_others_apps_summary">Discover all my apps</string>

    <string name="pref_about_rate_app_title">Rate this App</string>
    <string name="pref_about_rate_app_summary">Your opinion matters us!</string>

    <string name="pref_about_dev_developer_label">Developer</string>

    <string name="pref_about_dev_email_title">Contact via email</string>
    <string name="pref_about_dev_email_summary">webserveis@gmail.com</string>

    <string name="pref_about_dev_twitter_title">\@Webserveis</string>
    <string name="pref_about_dev_twitter_summary">Follow me on Twitter</string>

    <string name="pref_about_dev_gplay_title">Gplay webpage</string>
    <string name="pref_about_dev_gplay_summary">Developer page on Google play</string>

    <string name="pref_about_dev_web_title">Developer web page</string>
    <string name="pref_about_dev_web_summary">Visit my personal development blog</string>


    <string name="pref_about_copyright_summary">Copyright Webserveis %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit">Edit</string>


</resources>