<?xml version="1.0" encoding="utf-8"?>
<app.webserveis.statelayout.StateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_state"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:animate="true"
    app:view_empty="@layout/view_empty"
    app:view_error="@layout/view_error"
    app:view_loading="@layout/view_loading"
    tools:context=".ui.subscriptions.SubscriptionDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_subscription_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSelectColorBg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/sub_color"
                app:cornerRadius="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlyName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusedByDefault="true"
                app:counterEnabled="true"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLength="30"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="80">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_description"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="3"
                    android:maxLength="80"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_price"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.tiper.MaterialSpinner
                android:id="@+id/spnCurrency"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/sub_currency" />

            <com.tiper.MaterialSpinner
                android:id="@+id/spnStatus"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/sub_status_array"
                android:hint="@string/sub_status" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlyFirstPayment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:placeholderText="@string/date_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_first_payment"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlyBillPeriod"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:prefixText="@string/sub_bill_period_every">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtBillPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_bill_period"
                    android:imeOptions="actionNext"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlyNextPayment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:placeholderText="@string/date_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNextPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_next_payment"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:text="10/09/2020 - 3 days left" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlyPreviousPayment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPreviousPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/sub_previous_payment"
                    android:inputType="none"
                    android:longClickable="false"
                    android:text="10/09/2020 - 3 days left" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</app.webserveis.statelayout.StateLayout>