<?xml version="1.0" encoding="utf-8"?>
<app.webserveis.statelayout.StateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_state_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:animate="true"
    app:view_empty="@layout/view_empty"
    app:view_error="@layout/view_error"
    app:view_loading="@layout/view_loading">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                tools:cardBackgroundColor="#8FBC8F">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="Name" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                        tools:text="0.0" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sub_status"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/tvRenewalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/tvBillPeriodLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sub_bill_period"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/tvBillPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sub_first_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/tvFirstPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/tvPreviousPaymentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sub_previous_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/tvPreviousPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/tvNextPaymentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sub_next_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/tvNextPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</app.webserveis.statelayout.StateLayout>
